Set up ErrorProne